package Entite.Monstres;
import Dice.Dice;

public class Attaque {
    private int m_portee;
    private String m_degats;

    public Attaque(int portee, String degats) {
        m_portee = portee;
        m_degats = degats;
    }
}
