package Personnages;

public enum Classe {
    CLERC,
    GUERRIER,
    MAGICIEN,
    ROUBLARD
}
