package entite.personnages;

/**
 * Énumeration ses différentes races disponibles pour les personnages jouables.
 * Chaque race peut influencer les caractéristiques du personnage (PV, force, dextérité, etc.).
 */
public enum Race {
    HUMAIN,
    NAIN,
    ELFE,
    HALFELIN;
}
